--- a/frontend/src/layouts/main.astro
+++ b/frontend/src/layouts/main.astro
@@ -12,7 +12,7 @@ import "../styles/global.css";
   </head>
   <body class="bg-gray-100 flex flex-col justify-center">
     <!-- Navbar -->
-    <Navbar />
+    <Navbar client:load />
 
     <!-- Pagina în sine -->
     <main class="min-h-screen flex items-center px-4">
