--- a/frontend/src/pages/index.astro
+++ b/frontend/src/pages/index.astro
@@ -1,27 +1,8 @@
 ---
 import Main from "@/layouts/main.astro";
-import ConversationList from "@/components/ConversationList";
-import ConversationPanel from "@/components/ConversationPanel";
-import Header from "@/components/Header";
-import ProfilSidebar from "@/components/profil/Profil"; // Creăm o componentă separată pentru profil
+import ChatApp from "@/components/ChatApp";
 ---
 
 <Main title="StegoApp">
-  <div class="flex h-screen">
-    {/* Panoul din stânga (Lista de conversații) */}
-    <aside class="w-1/4 border-r border-gray-200 overflow-y-auto">
-      <Header client:load />
-      <ConversationList client:load />
-    </aside>
-
-    {/* Panoul central (Conținutul conversației) */}
-    <main class="flex-1 overflow-hidden">
-      <ConversationPanel client:load />
-    </main>
-
-    {/* Panoul din dreapta (Profil) */}
-    <aside class="w-1/4 border-l border-gray-200 overflow-y-auto">
-      <ProfilSidebar client:load />
-    </aside>
-  </div>
+  <ChatApp client:load />
 </Main>
